alteracoes no login e regra 38]
